Added extra styles, prepping for new computer

--- a/CastlePropertyInspections/index.html
+++ b/CastlePropertyInspections/index.html
@@ -67,53 +67,63 @@
             <h2>Services</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, justo ut consectetur condimentum, diam arcu tincidunt neque, eu tristique ex ex eget erat. Quisque tincidunt, ex sed euismod suscipit, diam leo auctor tortor, id pulvinar mauris risus eu odio. Donec lobortis ex vitae porttitor rhoncus. Donec tempor, orci vel lobortis accumsan, tellus enim eleifend purus, eget pretium magna diam sit amet mauris. Sed pellentesque maximus eleifend. Proin dui libero, tincidunt ac lacus et, tempor commodo nunc. In sit amet erat semper, aliquet odio eget, egestas nisl. Curabitur fringilla, elit eu iaculis porttitor, nunc nunc pharetra odio, ac euismod magna dolor eget arcu. Duis gravida massa ac mattis tincidunt. Cras fermentum justo erat, in fringilla ex lacinia in. Aenean semper justo ac lorem elementum blandit. Nullam posuere odio neque, ut imperdiet orci aliquet nec. Nullam a leo in sem efficitur elementum a nec dui. Nullam porta eget purus nec congue. Donec sit amet mollis sem, vel imperdiet felis.</p>
             <h4>Services Included in a Full Inspection:</h4>
-            <ul>
-                <li>Insulation and Ventilation</li>
-                <li>Fireplace Damper Door and Hearth</li>
-                <li>Garage Doors, Safety Sensors and Openers</li>
-                <li>Electrical Service Line and Meter Box</li>
-                <li>Electrical Panel(s), Breakers and Fuses</li>
-                <li>Main Disconnect and Service Amperage</li>
-                <li>Heating System</li>
-                <li>Cooling System</li>
-                <li>Skylight, Chimney, and Other Roof Penetrations</li>
-                <li>Roof, Vents, Flashings and Trim</li>
-                <li>Gutters and Downspouts</li>
-                <li>Grading and Drainage</li>
-                <li>Drainage Sump Pumps with Accessible Floats</li>
-                <li>Main Water Shut-off Valve</li>
-                <li>Water Heating System</li>
-                <li>Water Penetration and Foundation Movement</li>
-                <li>Interior Plumbing Fixtures and Faucets</li>
-                <li>Decks, Stoops, Porches, Walkways and Railings</li>
-                <li>Eaves, Soffits and Fascia</li>
-                <li>Basement, Foundation and Crawlspace</li>
-                <li>Grounding and Bonding</li>
-                <li>GFCIs and AFCIs</li>
-            </ul>
+            <div class="row">
+                <div class="col-sm-6">
+                    <ul>
+                        <li>Insulation and Ventilation</li>
+                        <li>Fireplace Damper Door and Hearth</li>
+                        <li>Garage Doors, Safety Sensors and Openers</li>
+                        <li>Electrical Service Line and Meter Box</li>
+                        <li>Electrical Panel(s), Breakers and Fuses</li>
+                        <li>Main Disconnect and Service Amperage</li>
+                        <li>Heating System</li>
+                        <li>Cooling System</li>
+                        <li>Skylight, Chimney, and Other Roof Penetrations</li>
+                        <li>Roof, Vents, Flashings and Trim</li>
+                        <li>Gutters and Downspouts</li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
+                    <ul>
+                        <li>Grading and Drainage</li>
+                        <li>Drainage Sump Pumps with Accessible Floats</li>
+                        <li>Main Water Shut-off Valve</li>
+                        <li>Water Heating System</li>
+                        <li>Water Penetration and Foundation Movement</li>
+                        <li>Interior Plumbing Fixtures and Faucets</li>
+                        <li>Decks, Stoops, Porches, Walkways and Railings</li>
+                        <li>Eaves, Soffits and Fascia</li>
+                        <li>Basement, Foundation and Crawlspace</li>
+                        <li>Grounding and Bonding</li>
+                        <li>GFCIs and AFCIs</li>
+                    </ul>
+                </div>
+            </div>
+            <!--<button>Click here to Schedule an Appointment</button>-->
         </div>
         <div id="pricing">
             <h2>Pricing</h2>
             <p>Cras vitae mattis augue. Proin est nulla, accumsan ac risus eu, pulvinar tincidunt urna. Fusce eget nunc eu felis vestibulum gravida. In aliquam eu ex eget finibus.</p>
+            <h3>Click on the following to schedule an inspection</h3>
             <div class="pricing-container row">
-                <div class="col-sm-4">
+                <a href="" class="col-sm-4">
                     <div class="price">
                         General Inspection
                         <h2>$350</h2>
                     </div>
-                </div>
-                <div class="col-sm-4">
+                </a>
+                <a href="" class="col-sm-4">
                     <div class="price">
                         Radon
                         <h2>$150</h2>
                     </div>
-                </div>
-                <div class="col-sm-4">
+                </a>
+                <a href="" class="col-sm-4">
                     <div class="price">
                         Both GHI &amp; Radon
                         <h2>$450</h2>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
         <div id="radon">
@@ -126,28 +136,7 @@
             <p>Ut purus metus, elementum vel dapibus in, viverra nec orci. Nam convallis bibendum porttitor. Sed blandit nisl vitae varius facilisis. Aenean commodo vestibulum turpis, suscipit pretium neque euismod ac. Nullam tincidunt, massa ut condimentum lacinia, est orci convallis risus, in imperdiet justo eros vitae tellus. Pellentesque fringilla ante vel elit lobortis, iaculis placerat massa imperdiet. Curabitur pretium, augue nec condimentum gravida, tortor est rhoncus metus, id tempus tellus nisl quis sapien.</p>
             <p>Email: email@host.com</p>
             <p>Phone: 123-456-7890</p>
-            <div class="row">
-                <div class="col-sm-4">
-                    First
-                </div>
-                <div class="col-sm-4">
-                    Second
-                </div>
-                <div class="col-sm-4">
-                    Third
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    Fourth
-                </div>
-                <div class="col-sm-4">
-                    Fifth
-                </div>
-                <div class="col-sm-4">
-                    Sixth
-                </div>
-            </div>
+            <h3>Here are the hours which I am available for an inspection</h3>
             <table class="schedule">
                 <tr>
                     <th>Sunday</th>
@@ -159,13 +148,13 @@
                     <th>Saturday</th>
                 </tr>
                 <tr>
-                    <td>Time goes here</td>
-                    <td>Time goes here</td>
-                    <td>Time goes here</td>
-                    <td>Time goes here</td>
-                    <td>Time goes here</td>
-                    <td>Time goes here</td>
-                    <td>Time goes here</td>
+                    <td>10:00 A.M. - 3:00 P.M.</td>
+                    <td>9:00 A.M. - 5:00 P.M.</td>
+                    <td>9:00 A.M. - 5:00 P.M.</td>
+                    <td>9:00 A.M. - 5:00 P.M.</td>
+                    <td>9:00 A.M. - 5:00 P.M.</td>
+                    <td>9:00 A.M. - 5:00 P.M.</td>
+                    <td>10:00 A.M. - 3:00 P.M.</td>
                 </tr>
             </table>
         </div>
