Added extra content

--- a/CastlePropertyInspections/index.html
+++ b/CastlePropertyInspections/index.html
@@ -24,6 +24,7 @@
         <div class="row header-backdrop">
             <div class="faded-panel"></div>
             <img src="Images/logo.png" />
+            <!--<img src="Images/IMG_4217.PNG" />-->
         </div>
         <div class="row menu">
             <a href="#header" class="col-xs-4 col-sm-2">Home</a>
@@ -39,58 +40,89 @@
     <div id="body">
         <div id="about">
             <h2>About</h2>
-            <p>Ut purus metus, elementum vel dapibus in, viverra nec orci. Nam convallis bibendum porttitor. Sed blandit nisl vitae varius facilisis. Aenean commodo vestibulum turpis, suscipit pretium neque euismod ac. Nullam tincidunt, massa ut condimentum lacinia, est orci convallis risus, in imperdiet justo eros vitae tellus. Pellentesque fringilla ante vel elit lobortis, iaculis placerat massa imperdiet. Curabitur pretium, augue nec condimentum gravida, tortor est rhoncus metus, id tempus tellus nisl quis sapien.</p>
             <div class="row">
-                <div class="col-sm-4">
-                    First
+                <div class="col-sm-6">
+                    <h4>This is flavor text below</h4>
+                    <p>What truly is a home inspection? A home inspection is an inspection of your hard earned money, your dreams, your hopes and your family’s future memories that should last for a lifetime. Your choice in hiring a home inspection company to represent you is an important part of buying a home. Our home inspection experts take your investment through a digital 400 point home inspection plan (with pictures) that will minimize your risk and provide you with ALL of the facts regarding the physical conditions of your future home or commercial property so that an informed investment decision can be made – without undue stress, costly repairs, or delays. Some home sellers will try to hide minor and major problems with the home.</p>
                 </div>
-                <div class="col-sm-4">
-                    Second
+                <div class="col-sm-6">
+                    <img src=""/>
+                    <p>Image goes here</p>
                 </div>
-                <div class="col-sm-4">
-                    Third
+            </div>
+            <div class="row inverted">
+                <div class="col-sm-6">
+                    <img src="" />
+                    <p>Image goes here</p>
+                </div>
+                <div class="col-sm-6">
+                    <h4>This is flavor text below</h4>
+                    <p>An alarming fact most people do not know is that the state of Ohio, even after numerous state bills being introduced over the years, still does not require a home inspector to be licensed. However, most states do require a home inspection to be completed prior to the sale of the home. This is why it is so important to get your home inspectors qualifications in detail and ask for proof. We are fully qualified by the International Association of Certified Home Inspectors (InterNACHI) for a high standard of ethics and inspection procedures. With Sharp Shooters, you will always get a professional and accurate inspection that you can trust.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    Fourth
+                <div class="col-sm-6">
+                    <h4>This is flavor text below</h4>
+                    <p>Our typical home inspection will take approximately three hours and will provide you with as much information as possible about your new home or commercial property. All of the conditions noted during the home inspection are recorded for your reference, including results from tests performed on various property systems. Our 400 point inspection FX reporting system is produced in an easy to understand computerized report to provide you with an unbiased, professional evaluation of the physical condition of your future home or commercial property. Your report will be given to you on site with digital photographs after the inspection is complete. Call now to schedule your next home or commercial inspection.</p>
                 </div>
-                <div class="col-sm-4">
-                    Fifth
-                </div>
-                <div class="col-sm-4">
-                    Sixth
+                <div class="col-sm-6">
+                    <img src="" />
+                    <p>Image goes here</p>
                 </div>
             </div>
         </div>
         <div id="services">
             <h2>Services</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, justo ut consectetur condimentum, diam arcu tincidunt neque, eu tristique ex ex eget erat. Quisque tincidunt, ex sed euismod suscipit, diam leo auctor tortor, id pulvinar mauris risus eu odio. Donec lobortis ex vitae porttitor rhoncus. Donec tempor, orci vel lobortis accumsan, tellus enim eleifend purus, eget pretium magna diam sit amet mauris. Sed pellentesque maximus eleifend. Proin dui libero, tincidunt ac lacus et, tempor commodo nunc. In sit amet erat semper, aliquet odio eget, egestas nisl. Curabitur fringilla, elit eu iaculis porttitor, nunc nunc pharetra odio, ac euismod magna dolor eget arcu. Duis gravida massa ac mattis tincidunt. Cras fermentum justo erat, in fringilla ex lacinia in. Aenean semper justo ac lorem elementum blandit. Nullam posuere odio neque, ut imperdiet orci aliquet nec. Nullam a leo in sem efficitur elementum a nec dui. Nullam porta eget purus nec congue. Donec sit amet mollis sem, vel imperdiet felis.</p>
-            <h4>Services Included in a Full Inspection:</h4>
-            <ul>
-                <li>Insulation and Ventilation</li>
-                <li>Fireplace Damper Door and Hearth</li>
-                <li>Garage Doors, Safety Sensors and Openers</li>
-                <li>Electrical Service Line and Meter Box</li>
-                <li>Electrical Panel(s), Breakers and Fuses</li>
-                <li>Main Disconnect and Service Amperage</li>
-                <li>Heating System</li>
-                <li>Cooling System</li>
-                <li>Skylight, Chimney, and Other Roof Penetrations</li>
-                <li>Roof, Vents, Flashings and Trim</li>
-                <li>Gutters and Downspouts</li>
-                <li>Grading and Drainage</li>
-                <li>Drainage Sump Pumps with Accessible Floats</li>
-                <li>Main Water Shut-off Valve</li>
-                <li>Water Heating System</li>
-                <li>Water Penetration and Foundation Movement</li>
-                <li>Interior Plumbing Fixtures and Faucets</li>
-                <li>Decks, Stoops, Porches, Walkways and Railings</li>
-                <li>Eaves, Soffits and Fascia</li>
-                <li>Basement, Foundation and Crawlspace</li>
-                <li>Grounding and Bonding</li>
-                <li>GFCIs and AFCIs</li>
-            </ul>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Inspection Types</h2>
+                    <div class="details-dropdown">
+                        <h4>Pre-Purchase Home Inspection</h4>
+                        <div class="details">
+                            <p>A Pre-Purchase home inspection is a visual process where all of the items typically used with a home are tested and/or operated to verify proper operation or installation. Doors and windows are opened and closed, roofing materials inspected, air-conditioning and heating systems operated. The inspector will fill the sinks and tub(s), run the shower(s), and flush the toilets. All the while making notes on the condition and operation of the components tested. Upon completion, a report will be distributed to your client.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h4>New Construction Inspection</h4>
+                        <div class="details">
+                            <p>New construction inspections are performed at the completion of a construction, but prior to your final walk through with the Builder’s Customer Service Representative or Superintendent. It is always a good idea to verify that utilities (gas, water, and electric) have been turned on, either by you or the builder depending on the builder’s policy. The inspection should be scheduled at just a day or two before your final walk through with the builder. This will ensure that most, if not all, last minute items have been completed prior to your inspection. At the conclusion of the inspection a completed report will be distributed to your client.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h4>Warranty Inspection</h4>
+                        <div class="details">
+                            <p>Warranty inspections are performed during the 11th month of your 1-year Builder Warranty. The inspection will be performed to verify that proper building techniques were used and that the various components of the home were properly installed. You will present your client with a completed report at the end of the inspection along with digital photos taken as needed for inaccessible areas.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h4>Services Included in a Full Inspection:</h4>
+                    <ul>
+                        <li>Insulation and Ventilation</li>
+                        <li>Fireplace Damper Door and Hearth</li>
+                        <li>Garage Doors, Safety Sensors and Openers</li>
+                        <li>Electrical Service Line and Meter Box</li>
+                        <li>Electrical Panel(s), Breakers and Fuses</li>
+                        <li>Main Disconnect and Service Amperage</li>
+                        <li>Heating System</li>
+                        <li>Cooling System</li>
+                        <li>Skylight, Chimney, and Other Roof Penetrations</li>
+                        <li>Roof, Vents, Flashings and Trim</li>
+                        <li>Gutters and Downspouts</li>
+                        <li>Grading and Drainage</li>
+                        <li>Drainage Sump Pumps with Accessible Floats</li>
+                        <li>Main Water Shut-off Valve</li>
+                        <li>Water Heating System</li>
+                        <li>Water Penetration and Foundation Movement</li>
+                        <li>Interior Plumbing Fixtures and Faucets</li>
+                        <li>Decks, Stoops, Porches, Walkways and Railings</li>
+                        <li>Eaves, Soffits and Fascia</li>
+                        <li>Basement, Foundation and Crawlspace</li>
+                        <li>Grounding and Bonding</li>
+                        <li>GFCIs and AFCIs</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div id="pricing">
             <h2>Pricing</h2>
@@ -118,36 +150,48 @@
         </div>
         <div id="radon">
             <h2>Radon</h2>
-            <p>Curabitur posuere lectus nibh. Morbi laoreet suscipit lacus vitae luctus. Nunc sagittis sit amet tortor et egestas. Cras vitae mattis augue. Proin est nulla, accumsan ac risus eu, pulvinar tincidunt urna. Fusce eget nunc eu felis vestibulum gravida. In aliquam eu ex eget finibus.</p>
+            <div class="row">
+                <div class="col-lg-6">
+                    <p>EPA estimates that about 20,000 lung cancer deaths each year in the U.S. are radon-related. Exposure to radon is the second leading cause of lung cancer after smoking. Radon is an odorless, tasteless and invisible gas produced by the decay of naturally occurring uranium in soil and water. Radon is a form of ionizing radiation and a proven carcinogen. Lung cancer is the only known effect on human health from exposure to radon in air. Thus far, there is no evidence that children are at greater risk of lung cancer than are adults.</p>
+                    <p>Radon in air is ubiquitous. Radon is found in outdoor air and in the indoor air of buildings of all kinds. EPA recommends homes be fixed if the radon level is 4 pCi/L (picocuries per liter) or more. Because there is no known safe level of exposure to radon, EPA also recommends that Americans consider fixing their home for radon levels between 2 pCi/L and 4 pCi/L. The average radon concentration in the indoor air of America’s homes is about 1.3 pCi/L. It is upon this level that EPA based its estimate of 20,000 radon-related lung cancers a year upon. It is for this simple reason that EPA recommends that Americans consider fixing their homes when the radon level is between 2 pCi/L and 4 pCi/L. The average concentration of radon in outdoor air is .4 pCi/L or 1/10th of EPA’s 4 pCi/L action level.</p>
+                    <p>For smokers the risk of lung cancer is significant due to the synergistic effects of radon and smoking. For this population about 62 people in a 1,000 will die of lung-cancer, compared to 7.3 people in a 1,000 for never smokers. Put another way, a person who never smoked (never smoker) who is exposed to 1.3 pCi/L has a 2 in 1,000 chance of lung cancer; while a smoker has a 20 in 1,000 chance of dying from lung cancer. Figure A compares the risks between smokers and never smokers; smokers are at a much higher risk than never smokers, e.g., at 8 pCi/L the risk to smokers is six times the risk to never smokers.</p>
+                </div>
+                <div class="col-lg-6">
+                    <img src="Images/radon_template.jpg" />
+                </div>
+            </div>
+            <p>The radon health risk is underscored by the fact that in 1988 Congress added Title III on Indoor Radon Abatement to the Toxic Substances Control Act. It codified and funded EPA’s then fledgling radon program. Also that year, the Office of the U.S. Surgeon General issued a warning about radon urging Americans to test their homes and to reduce the radon level when necessary (U.S. Surgeon General).</p>
+            <p>Unfortunately, many Americans presume that because the action level is 4 pCi/L, a radon level of less than 4 pCi/L is “safe”. This perception is altogether too common in the residential real estate market. In managing any risk, we should be concerned with the greatest risk. For most Americans, their greatest exposure to radon is in their homes; especially in rooms that are below grade (e.g., basements), rooms that are in contact with the ground and those rooms immediately above them.</p>
+            <p>It’s never too late to reduce your risk of lung cancer. Don’t wait to test and fix a radon problem. If you are a smoker, stop smoking. Consider quitting. Until you can quit, smoke outside and provide your family with a smoke-free home.</p>
         </div>
         <div id="contact">
             <h2>Contact</h2>
-            <p>Curabitur posuere lectus nibh. Morbi laoreet suscipit lacus vitae luctus. Nunc sagittis sit amet tortor et egestas. Cras vitae mattis augue. Proin est nulla, accumsan ac risus eu, pulvinar tincidunt urna. Fusce eget nunc eu felis vestibulum gravida. In aliquam eu ex eget finibus.</p>
-            <p>Ut purus metus, elementum vel dapibus in, viverra nec orci. Nam convallis bibendum porttitor. Sed blandit nisl vitae varius facilisis. Aenean commodo vestibulum turpis, suscipit pretium neque euismod ac. Nullam tincidunt, massa ut condimentum lacinia, est orci convallis risus, in imperdiet justo eros vitae tellus. Pellentesque fringilla ante vel elit lobortis, iaculis placerat massa imperdiet. Curabitur pretium, augue nec condimentum gravida, tortor est rhoncus metus, id tempus tellus nisl quis sapien.</p>
-            <p>Email: email@host.com</p>
-            <p>Phone: 123-456-7890</p>
-            <div class="row">
-                <div class="col-sm-4">
-                    First
-                </div>
-                <div class="col-sm-4">
-                    Second
-                </div>
-                <div class="col-sm-4">
-                    Third
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    Fourth
-                </div>
-                <div class="col-sm-4">
-                    Fifth
-                </div>
-                <div class="col-sm-4">
-                    Sixth
-                </div>
-            </div>
+            <p></p>
+            <p></p>
+            <form>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div>
+                            Name:
+                            <input/>
+                        </div>
+                        <div>
+                            Email:
+                            <input/>
+                        </div>
+                        <div>
+                            <h4>This message is because I...</h4>
+                            <button>Want to schedule and appointment</button>
+                            <button>Would like to ask a question or send a message</button>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div>Additional Comments and Concerns:</div>
+                        <textarea rows="10" cols="80"></textarea>
+                    </div>
+                 </div>
+            </form>
+            <h4>Business Hours</h4>
             <table class="schedule">
                 <tr>
                     <th>Sunday</th>
@@ -168,6 +212,8 @@
                     <td>Time goes here</td>
                 </tr>
             </table>
+            <p>Email: email@host.com</p>
+            <p>Phone: 123-456-7890</p>
         </div>
     </div>
     <div id="footer">
